{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 118,
  "lineage": "7b9fa72c-4cba-e090-d48f-05a0c1458773",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "RATE",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/zones/us-west4-a/instanceGroups/web-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 500,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-01-21T20:50:05.241-08:00",
            "enable_cdn": false,
            "fingerprint": "l11XxK9pJrQ=",
            "generated_id": -1117684078,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/httpHealthChecks/dev-http-health"
            ],
            "id": "projects/studious-spider-371813/global/backendServices/web-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-backend",
            "port_name": "http",
            "project": "studious-spider-371813",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/backendServices/web-backend",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_health_check.dev_health",
            "google_compute_http_health_check.demo",
            "google_compute_instance_group_manager.demo",
            "google_compute_instance_template.demo",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-21T20:48:53.431-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/studious-spider-371813/global/firewalls/myvpc1-allow-http",
            "log_config": [],
            "name": "myvpc1-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/networks/myvpc1",
            "priority": 1000,
            "project": "studious-spider-371813",
            "self_link": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/firewalls/myvpc1-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-21T20:48:53.985-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/studious-spider-371813/global/firewalls/myvpc1-allow-https",
            "log_config": [],
            "name": "myvpc1-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/networks/myvpc1",
            "priority": 1000,
            "project": "studious-spider-371813",
            "self_link": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/firewalls/myvpc1-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-21T20:48:53.937-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/studious-spider-371813/global/firewalls/myvpc1-allow-ssh",
            "log_config": [],
            "name": "myvpc1-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/networks/myvpc1",
            "priority": 1000,
            "project": "studious-spider-371813",
            "self_link": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/firewalls/myvpc1-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.190.42.209",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-01-21T20:48:30.345-08:00",
            "id": "projects/studious-spider-371813/global/addresses/web-lb-ip",
            "name": "web-lb-ip",
            "prefix_length": 0,
            "project": "studious-spider-371813",
            "self_link": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/addresses/web-lb-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/studious-spider-371813/global/forwardingRules/web-http",
            "ip_address": "35.190.42.209",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-http",
            "port_range": "80",
            "project": "studious-spider-371813",
            "self_link": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/forwardingRules/web-http",
            "target": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/targetHttpProxies/web-http"
          },
          "dependencies": [
            "google_compute_global_address.demo",
            "google_compute_target_http_proxy.http",
            "google_compute_url_map.http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/studious-spider-371813/global/forwardingRules/web-https",
            "ip_address": "35.190.42.209",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-https",
            "port_range": "443",
            "project": "studious-spider-371813",
            "self_link": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/forwardingRules/web-https",
            "target": "projects/studious-spider-371813/global/targetHttpsProxies/web-https"
          },
          "dependencies": [
            "google_compute_global_address.demo",
            "google_compute_managed_ssl_certificate.demo",
            "google_compute_target_https_proxy.https",
            "google_compute_url_map.https"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/studious-spider-371813/global/networks/myvpc1",
            "mtu": 0,
            "name": "myvpc1",
            "project": "studious-spider-371813",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/networks/myvpc1"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-21T20:48:55.841-08:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/studious-spider-371813/regions/us-west4/subnetworks/mysubnet-1",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "mysubnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/networks/myvpc1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "studious-spider-371813",
            "purpose": "PRIVATE",
            "region": "us-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/regions/us-west4/subnetworks/mysubnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-21T20:48:43.051-08:00",
            "id": "projects/studious-spider-371813/global/targetHttpProxies/web-http",
            "name": "web-http",
            "project": "studious-spider-371813",
            "proxy_bind": false,
            "proxy_id": -1117684028,
            "self_link": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/targetHttpProxies/web-http",
            "url_map": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/urlMaps/web-http"
          },
          "dependencies": [
            "google_compute_url_map.http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-21T21:18:34.355-08:00",
            "id": "projects/studious-spider-371813/global/targetHttpsProxies/web-https",
            "name": "web-https",
            "project": "studious-spider-371813",
            "proxy_bind": false,
            "proxy_id": -1117685307,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/targetHttpsProxies/web-https",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/sslCertificates/my-ssl-cert"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/urlMaps/web-https"
          },
          "dependencies": [
            "google_compute_managed_ssl_certificate.demo",
            "google_compute_url_map.https"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-21T20:48:30.332-08:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "-bE3kBipLmc=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/studious-spider-371813/global/urlMaps/web-http",
            "map_id": -1117683983,
            "name": "web-http",
            "path_matcher": [],
            "project": "studious-spider-371813",
            "self_link": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/urlMaps/web-http",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-21T20:50:39.423-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/backendServices/web-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "KrcNjR94Eao=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/studious-spider-371813/global/urlMaps/web-https",
            "map_id": -1117684112,
            "name": "web-https",
            "path_matcher": [],
            "project": "studious-spider-371813",
            "self_link": "https://www.googleapis.com/compute/v1/projects/studious-spider-371813/global/urlMaps/web-https",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet-1",
            "google_compute_backend_service.demo",
            "google_compute_health_check.dev_health",
            "google_compute_http_health_check.demo",
            "google_compute_instance_group_manager.demo",
            "google_compute_instance_template.demo"
          ]
        }
      ]
    }
  ]
}